# imsql

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE.md  README.md  imgui.ini  meson.build
include/imsqlite/: collection.hpp  std.hpp
include/imsqlite/controllers/: app_controllers.hpp  db.hpp  identifier.hpp  spreadsheet.hpp  theme.hpp
include/imsqlite/dsalg/: fp.hpp  sparse_tree.hpp
include/imsqlite/dsalg/views/: dedup.hpp  join_with.hpp
include/imsqlite/math/: interval.hpp  lpf.hpp
include/imsqlite/models/: app_state.hpp  base_types.hpp  db.hpp  persistent.hpp  spreadsheet.hpp  theme.hpp
include/imsqlite/models/detail/: unique_id.hpp
include/imsqlite/models/dg/: db_node.hpp  db_table_node.hpp  dg.hpp  many2many_node.hpp  node.hpp  operator_node.hpp  spreadsheet_node.hpp  transform_node.hpp
include/imsqlite/models/views/: spreadsheet_designer.hpp
include/imsqlite/os/: os.hpp
include/imsqlite/os/platform/: error.hpp  macos.hpp  platform_provider.hpp
include/imsqlite/pch/: graph.hpp  imgui.hpp  imnodes.hpp  std.hpp
include/imsqlite/presenters/: designer_presenter.hpp  presenter_ctx.hpp
include/imsqlite/serde/: models.hpp  serde.hpp  ui.hpp
include/imsqlite/ui/: base_types.hpp  button.hpp  component.hpp  dnd.hpp  input_text.hpp  render_ctx.hpp  style.hpp  tab_bar.hpp  tab_item.hpp  text.hpp  tooltip.hpp  window.hpp
include/imsqlite/ui/detail/: component_label.hpp  imgui_interop.hpp
include/imsqlite/ui/nodes/: bidirectional_attribute.hpp  color_style.hpp  editor.hpp  input_attribute.hpp  link.hpp  node.hpp  output_attribute.hpp  static_attribute.hpp  title_bar.hpp
include/imsqlite/views/: main_window.hpp  spreadsheet_designer.hpp
lib/immm/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
lib/immm/cmake/: FetchImGui.cmake  FetchImNodes.cmake  FetchMetalCpp.cmake
lib/immm/include/immm/: base_types.hpp  button.hpp  component.hpp  error.hpp  input_text.hpp  render_ctx.hpp  style.hpp  tab_bar.hpp  tab_item.hpp  table.hpp  text.hpp  window.hpp
lib/immm/include/immm/detail/: component_label.hpp  imgui_interop.hpp  pch.hpp
lib/immm/include/immm/nodes/: bidirectional_attribute.hpp  color_style.hpp  editor.hpp  input_attribute.hpp  link.hpp  node.hpp  output_attribute.hpp  static_attribute.hpp  title_bar.hpp
lib/immm/include/immm/platform/: frame_handle.hpp  iplatform.hpp  platform_macos.hpp
lib/immm/src/: button.cpp  input_text.cpp  render_ctx.cpp  tab_bar.cpp  tab_item.cpp  table.cpp  text.cpp  window.cpp
lib/immm/src/nodes/: editor.cpp  input_attribute.cpp  link.cpp  node.cpp  output_attribute.cpp  static_attribute.cpp  title_bar.cpp
lib/immm/src/platform/: macos.mm
lib/include/imsqlite/: deprecated.hpp
lib/include/imsqlite/_controller/: dbg.hpp  sheet.hpp
lib/include/imsqlite/_model/: sheet.hpp
lib/include/imsqlite/_view/: dbg.hpp
lib/include/imsqlite/db/: db.hpp
lib/include/imsqlite/ex/: str.hpp
lib/include/imsqlite/ex/filt/: lpf.hpp
lib/include/imsqlite/os/platform/: frame_handle.hpp  macos.hpp
lib/include/imsqlite/sql/: db.hpp  table.hpp
lib/include/imsqlite/ui/: sheet_window.hpp  style.hpp  windbg.hpp  window.hpp
lib/include/imsqlite/ui/node_editor/: node.hpp  node_editor.hpp
lib/src/os/platform/: macos.mm
lib/src/sql/: db.cpp
lib/src/ui/: windbg.cpp  window.cpp
lib/src/ui/node_editor/: node.cpp  node_editor.cpp
src/: main.cpp
src/controllers/: db.cpp  spreadsheet.cpp
src/models/: base_types.cpp  db.cpp
src/models/dg/: db_node.cpp  db_table_node.cpp  dg.cpp  node.cpp  transform_node.cpp
src/os/platform/: macos.mm
src/ui/: button.cpp  input_text.cpp  render_ctx.cpp  tab_bar.cpp  tab_item.cpp  text.cpp  window.cpp
src/ui/nodes/: editor.cpp  input_attribute.cpp  link.cpp  node.cpp  output_attribute.cpp  static_attribute.cpp  title_bar.cpp
src/views/: main_window.cpp  spreadsheet_designer.cpp
subprojects/: .gitignore  microsoft-gsl.wrap
subprojects/GSL-4.2.0/: .meson-subproject-wrap-hash.txt
subprojects/SQLiteCpp-3.3.2/: .meson-subproject-wrap-hash.txt
subprojects/imnodes/: imnodes.cpp  meson.build
subprojects/metal-cpp/: meson.build
tests/: test_dedup.cpp
